# shopify-api-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release-plz.yml
docs/: README.md  getting_started.md
docs/usage/: custom_apps.md  graphql.md  graphql_storefront.md  oauth.md  rest.md  webhooks.md
src/: error.rs  lib.rs
src/auth/: associated_user.rs  mod.rs  scopes.rs  session.rs
src/auth/oauth/: auth_query.rs  begin_auth.rs  client_credentials.rs  error.rs  hmac.rs  jwt_payload.rs  mod.rs  state.rs  token_exchange.rs  token_refresh.rs  validate_callback.rs
src/clients/: errors.rs  http_client.rs  http_request.rs  http_response.rs  mod.rs
src/clients/graphql/: client.rs  errors.rs  mod.rs
src/clients/rest/: client.rs  errors.rs  mod.rs
src/clients/storefront/: client.rs  mod.rs  storefront_http.rs  token.rs
src/config/: mod.rs  newtypes.rs  version.rs
src/rest/: errors.rs  mod.rs  path.rs  resource.rs  response.rs  tracking.rs
src/rest/resources/: mod.rs
src/rest/resources/v2025_10/: access_scope.rs  application_charge.rs  article.rs  asset.rs  blog.rs  collect.rs  collection_trait.rs  comment.rs  country.rs  currency.rs  custom_collection.rs  discount_code.rs  draft_order.rs  event.rs  fulfillment.rs  fulfillment_order.rs  fulfillment_service.rs  gift_card.rs  inventory_item.rs  inventory_level.rs  location.rs  metafield.rs  mod.rs  order.rs  page.rs  policy.rs  price_rule.rs  product.rs  product_image.rs  province.rs  recurring_application_charge.rs  redirect.rs  refund.rs  script_tag.rs  shop.rs  smart_collection.rs  storefront_access_token.rs  theme.rs  transaction.rs  usage_charge.rs  (+3 more)
src/rest/resources/v2026_04/: access_scope.rs  application_charge.rs  article.rs  asset.rs  blog.rs  collect.rs  collection_trait.rs  comment.rs  country.rs  currency.rs  custom_collection.rs  customer.rs  discount_code.rs  draft_order.rs  event.rs  fulfillment.rs  fulfillment_order.rs  gift_card.rs  (+26 more)
src/webhooks/: errors.rs  mod.rs  registry.rs  types.rs  verification.rs
tests/: additional_rest_resources_tests.rs  client_credentials_tests.rs  core_rest_resources_tests.rs  graphql_client_tests.rs  http_client_tests.rs  integration_tests.rs  rest_client_tests.rs  rest_resource_tests.rs  storefront_client_tests.rs  token_exchange_tests.rs  version_management.rs
(+21 files in other folders)
