[package]
name = "shopify-api-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Sascha Bratton"]
description = "A Rust SDK for the Shopify API"
readme = "README.md"
homepage = "https://github.com/saschabratton/shopify-api-rust"
repository = "https://github.com/saschabratton/shopify-api-rust"
license = "MIT"
keywords = ["shopify", "api", "sdk", "ecommerce"]
categories = ["api-bindings", "web-programming"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
wiremock = "0.5"
tokio-test = "0.4"

[lib]
name = "shopify_api"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
